This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: compile error when converting selectmodule to AC due to missing #define-s
Type: compile error Stage: resolved
Components: Argument Clinic Versions: Python 3.7, Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: larry, serhiy.storchaka, taleinat, vstinner
Priority: normal Keywords: patch

Created on 2017-11-02 15:13 by taleinat, last changed 2022-04-11 14:58 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 4230 merged taleinat, 2017-11-02 15:18
PR 4253 merged taleinat, 2017-11-03 13:10
Messages (5)
msg305427 - (view) Author: Tal Einat (taleinat) * (Python committer) Date: 2017-11-02 15:13
I'm converting Modules/selectmodule.c.h as part of issue #20182.

After converting the code and running Tools/clinic/clinic.py, compilation is failing on Windows due to the following block *not* being generated by in the Modules/clinic/selectmodule.c.h file:

#ifndef SELECT_POLL_METHODDEF
    #define SELECT_POLL_METHODDEF
#endif /* !defined(SELECT_POLL_METHODDEF) */

Adding the block manually fixes the issue.

This seems to be caused by a bug in clinic.py. Attaching PR fix a fix immediately.
msg305428 - (view) Author: Tal Einat (taleinat) * (Python committer) Date: 2017-11-02 15:19
See PR 4230.
msg305464 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2017-11-03 09:09
New changeset 4f57409a2f7bdf8fb559cddc7c6533ca2c471c67 by Serhiy Storchaka (Tal Einat) in branch 'master':
bpo-31926: fix missing *_METHODDEF statements by argument clinic (#4230)
https://github.com/python/cpython/commit/4f57409a2f7bdf8fb559cddc7c6533ca2c471c67
msg305481 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2017-11-03 13:43
New changeset f8b3f6b178e48773cd7298141cbaf408c6917e41 by Victor Stinner (Tal Einat) in branch '3.6':
[3.6] bpo-31926: fix missing *_METHODDEF statements by argument clinic (GH-4230) (#4253)
https://github.com/python/cpython/commit/f8b3f6b178e48773cd7298141cbaf408c6917e41
msg305482 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2017-11-03 13:46
Thank you Tal Einat for your bug report and your fix. It's now merged into 3.6 and master (future 3.7).
History
Date User Action Args
2022-04-11 14:58:53adminsetgithub: 76107
2017-11-03 13:46:37vstinnersetstatus: open -> closed
resolution: fixed
messages: + msg305482

stage: patch review -> resolved
2017-11-03 13:43:18vstinnersetnosy: + vstinner
messages: + msg305481
2017-11-03 13:17:47serhiy.storchakasetversions: + Python 3.6
2017-11-03 13:10:17taleinatsetpull_requests: + pull_request4215
2017-11-03 09:09:06serhiy.storchakasetnosy: + serhiy.storchaka
messages: + msg305464
2017-11-02 15:19:47taleinatsetmessages: + msg305428
2017-11-02 15:18:54taleinatsetkeywords: + patch
stage: patch review
pull_requests: + pull_request4199
2017-11-02 15:13:55taleinatcreate